# game-trend-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
Docs/: 00_index.md  01_product_vision.md  01_visao_do_produto.md  02_definicao_jogo_em_alta.md  02_trending_game_definition.md  03_data_sources_by_platform.md  03_fontes_de_dados_por_plataforma.md  04_collection_and_update_strategy.md  04_estrategia_de_coleta_e_atualizacao.md  05_initial_data_model.md  05_modelo_de_dados_inicial.md  06_logica_de_classificacao.md  06_scoring_logic.md  07_escopo_mvp.md  07_mvp_scope.md  08_arquitetura_proposta.md  08_proposed_architecture.md  09_backlog_inicial.md  09_initial_backlog.md  10_estrutura_do_repositorio.md  10_repository_structure.md  11_roadmap_2_a_4_semanas.md  11_roadmap_2_to_4_weeks.md  12_riscos_e_limitacoes.md  12_risks_and_limitations.md  90_fase1_scaffold_mvp.md  90_phase1_mvp_scaffold.md
config/: channel_profile.yaml  games_seed.yaml
config/csv_templates/: metrics_import_template.csv
scripts/: run_local.ps1
src/trendgames/: __init__.py  cli.py  domain.py  scoring.py  scout_scoring.py  settings.py  storage.py
src/trendgames.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/trendgames/ingestion/: __init__.py  csv_import.py  steam.py  tiktok_search.py  twitch.py  youtube.py  youtube_api.py
