[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trendgames"
version = "0.1.0"
description = "Local MVP to ingest gaming trend metrics and recommend what to cover next."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TrendGames" }]
dependencies = []

[project.scripts]
trendgames = "trendgames.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
